@@ -1,0 +1,2 @@
+START: error message #5
+continuation of error message #5
